k8s/prod/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: production
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 546155105753.dkr.ecr.us-east-1.amazonaws.com/skycast-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env: # <--- ADICIONE ESTA SEÇÃO
            - name: VITE_API_URL
              value: "http://skycast-api.production.svc.cluster.local" # <--- COLOQUE O IP REAL DO SEU MINIKUBE AQUI
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
